--- a/style.css
+++ b/style.css
@@ -14,7 +14,27 @@
   left: 0;
 }
 
+.inner{
+  overflow: hidden;
+}
 
+.inner img{
+  transition: all 1.5s ease;
+}
+
+.inner:hover img{
+  transform: scale(1.5);
+}
+
+.ab-head{
+  padding-top: 0%;
+  font-size: 25px;
+  text-align: center;
+  padding-top: 50px;
+  margin-bottom: 35px;
+  text-transform: uppercase;
+  letter-spacing: 10px;
+}
 
 
 
@@ -53,27 +73,7 @@
   margin-top: 35px;
   margin-left: 35px;
 }
-.links {
-  float: right;
-  list-style: none;
-  margin-top: 35px;
-  margin-right: 35px;
-}
-.links li {
-  display: inline-block;
-}
-.links li a {
-  color: white;
-  text-decoration: none;
-  padding: 10px 30px;
-  font-family: "Roboto", sans-serif;
-  font-size: 15px;
-}
 
-.links li a:hover {
-  border: 1px solid white;
-  background-color: #f7a59f;
-}
 
 .main {
   color: white;
@@ -129,7 +129,7 @@
 
 .submit {
   margin-top: 20px;
-  margin-bottom: 150px;
+  margin-bottom: 35px;
 }
 
 .formtable{
@@ -140,4 +140,95 @@
   background-color: antiquewhite;
   text-align: center;
   margin-top: 200px;
+}
+
+/* Footer */
+.footer{
+  background: #303036;
+  color: #d3d3d3;
+  height: 400px;
+  position: relative;
+}
+
+.footer .footer-content{
+  height: 350px;
+  display: flex;
+}
+
+.footer .footer-content h1,
+.footer .footer-content h2 {
+  color: white;
+}
+
+.footer .footer-content .about .contact span{
+  display: block;
+  font-size: 1.1em;
+  margin-bottom: 8px;
+}
+
+.footer .footer-content .about .socials a {
+  border: 1px solid gray;
+  width: 45px;
+  height: 41px;
+  padding-top: 5px;
+  margin-right: 5px;
+  text-align: center;
+  display: inline-block;
+  font-size: 1.3em;
+  border-radius:3px;
+}
+
+.footer .footer-content .about .socials a:hover {
+  border: 1px solid white;
+  color: white;
+  transition: all .3s;
+}
+
+.footer .footer-content .links ul a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  margin-bottom:10px;
+  font-size: 1.3em;
+
+}
+
+.footer .footer-content .links ul a:hover {
+  color: white;
+  margin-left: 15px;
+  transition: all .3s;
+
+}
+.footer .footer-content .footer-section{
+  flex: 1;
+  padding: 25px;
+
+}
+
+.footer .footer-content .footer-section
+
+.footer .footer-content .contact-input{
+  background: #272727;
+  color: #bebdbd;
+  margin-bottom: 10px;
+  line-height: 1.5rem;
+  padding: .9rem 1.4rem;
+  border: none;
+}
+
+.btn-big{
+  padding: .7rem 1.3rem;
+  line-height: 1.3rem;
+}
+
+.footer .footer-bottom{
+  background: #343a40;
+  color: #686868;
+  height: 50px;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  padding-top: 20px;
+  width: 100%;
 }
